2012-06-06  Xianzhu Wang  <wangxianzhu@chromium.org>

        [Chromium] Remove header dependency of ImageDiff to WTF
        https://bugs.webkit.org/show_bug.cgi?id=88422

        Reviewed by Adam Barth.

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
        * DumpRenderTree/chromium/ImageDiff.cpp:
        (untestedCompareImages):

2012-06-06  Amy Ousterhout  <aousterh@chromium.org>

        [WebKit] DeviceOrientation cleanup
        https://bugs.webkit.org/show_bug.cgi?id=88406

        Reviewed by Kent Tamura.

        Updated LayoutTestController to use new public default constructor in WebDeviceOrientation.h.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::setMockDeviceOrientation):

2012-05-29  Dirk Pranke  <dpranke@chromium.org>

        webkitpy: add support for an ordered dict of test expectations
        https://bugs.webkit.org/show_bug.cgi?id=87802

        Reviewed by Ojan Vafai.

        As per https://bugs.webkit.org/show_bug.cgi?id=65834 we want to
        support a cascaded list of test expectations files. An easy way
        to think of this is as an ordered dictionary of name -> contents
        for files, where the name is usually a path on disk (I say
        usually because we want to support other kinds of expectations
        like the compile-time skips for unsupported features in
        webkit.py, and we want to continue to support "in-memory" test
        expectations that don't require a filesystem).

        Conveniently there is an OrderedDict implementation in Python
        2.7+ and it is available as a backport, so the first step in
        adding this support is to use that implementation. Subsequent
        patches will update the test_expectations.py module (and other
        callers) to access the dict directly.

        This patch just changes the base internal implementation and
        provides wrappers for compatibility. The derived ports