@@ -1,3 +1,15 @@
+2012-06-06  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r119662.
+        http://trac.webkit.org/changeset/119662
+        https://bugs.webkit.org/show_bug.cgi?id=88487
+
+        Broke builds (Requested by rniwa on #webkit).
+
+        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
+        * DumpRenderTree/chromium/ImageDiff.cpp:
+        (untestedCompareImages):
+
 2012-06-06  Xianzhu Wang  <wangxianzhu@chromium.org>
 
         [Chromium] Remove header dependency of ImageDiff to WTF
